More sanity checking

--- a/toy_sanity.ipynb
+++ b/toy_sanity.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-30 04:17:11.798318: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-08-30 04:17:11.798341: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-08-31 07:33:07.956023: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-31 07:33:07.956046: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -49,10 +49,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "433909248\n"
+     "ename": "AttributeError",
+     "evalue": "'collections.OrderedDict' object has no attribute 'to'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     80\u001b[0m     labels \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_file)\n\u001b[1;32m     81\u001b[0m posbmodel \u001b[38;5;241m=\u001b[39m LinearPOSBertV1(\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mlist\u001b[39m(labels\u001b[38;5;241m.\u001b[39mkeys())))\n\u001b[0;32m---> 82\u001b[0m tmp \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./a3distrib/ckpt/posbert.pth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(device)\n\u001b[1;32m     83\u001b[0m posbmodel\u001b[38;5;241m.\u001b[39mload_state_dict(tmp)\n\u001b[1;32m     84\u001b[0m posbmodel\u001b[38;5;241m.\u001b[39meval()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'collections.OrderedDict' object has no attribute 'to'"
      ]
     }
    ],
@@ -135,10 +139,11 @@
     "    return cop\n",
     "\n",
     "# Load POS model, label vocabulary \n",
-    "with open('./a3-distrib/lab_vocab.json') as json_file:\n",
+    "with open('./a3distrib/lab_vocab.json') as json_file:\n",
     "    labels = json.load(json_file)\n",
     "posbmodel = LinearPOSBertV1(len(list(labels.keys())))\n",
-    "posbmodel.load_state_dict(torch.load(\"./a3-distrib/ckpt/posbert.pth\"))\n",
+    "tmp = torch.load(\"./a3distrib/ckpt/posbert.pth\")\n",
+    "posbmodel.load_state_dict(tmp)\n",
     "posbmodel.eval()\n",
     "torch.cuda.empty_cache()\n",
     "print(torch.cuda.memory_allocated(\"cuda:2\"))"
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6a628828-df45-46ab-992b-fe662c079a83",
    "metadata": {},
    "outputs": [],
@@ -171,22 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "120c5bdf-ae5b-461c-a2ed-5a8dcffef9ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "torch.Size([2, 500])\n",
-      "2\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# get gold labels for the exploded set\n",
@@ -211,21 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a412dd25-9660-48b6-a334-68342357a7eb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8571428571428571"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# accuracy (assumes that gold is good, which isn't confirmed here)\n",
     "check_accuracy(pred, latposylabels)"
@@ -233,23 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7110d1a5-5db6-459b-ab63-0a11743fe720",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "The Fed raises interest rates him\n",
-      "PREDICTED\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', 'CC', '.', '<pad>', '<pad>']\n",
-      "GOLD\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', 'PRP', '.', '<pad>', '<pad>']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lablist = [k for k in labels.keys()]\n",
     "CUTOFF = 10\n",
@@ -277,21 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c211410b-8afd-4cd0-9f02-8552b88db575",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Fed raises interest rates\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', '.', '<pad>']\n",
-      "The Fed raises interest him\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'PRP', '.', '<pad>']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indivlabs = posbmodel(dsetx[0])\n",
     "\n",
@@ -306,6 +264,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b43d24a8-e14b-4464-b96f-65c0434341f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00173714-0b8f-49da-8f55-4e6f115d0dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7fb2aa9-6a63-4a7c-8f69-d46d6c4e3adc",
    "metadata": {},
    "outputs": [],
    "source": []
