--- a/toy_sanity_dev.ipynb
+++ b/toy_sanity_dev.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-31 03:41:04.241566: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-08-31 03:41:04.241587: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-08-31 07:35:15.835204: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-31 07:35:15.835227: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -143,16 +143,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "867814400\n"
      ]
     }
    ],
    "source": [
     "# Load POS model, label vocabulary \n",
-    "with open('./a3-distrib/lab_vocab.json') as json_file:\n",
+    "with open('./a3distrib/lab_vocab.json') as json_file:\n",
     "    labels = json.load(json_file)\n",
     "posbmodel = LinearPOSBertV1(len(list(labels.keys())))    \n",
-    "t = torch.load(\"./a3-distrib/ckpt/posbert.pth\")\n",
+    "t = torch.load(\"./a3distrib/ckpt/posbert.pth\")\n",
     "posbmodel.load_state_dict(t)\n",
     "posbmodel.eval()\n",
     "print(torch.cuda.memory_allocated(\"cuda:2\"))\n",
@@ -161,22 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "e65225c6-cc3e-4560-b4b7-a832af033642",
    "metadata": {},
    "outputs": [],
    "source": [
     "# method that makes padding equal to 1\n",
-    "def ones_padding(msk):\n",
-    "    cop = msk\n",
-    "    tmp = cop[0]<0\n",
-    "    limit = tmp.nonzero()[0]\n",
-    "    print(limit)\n",
-    "    for i in range(0, len(msk)):\n",
-    "        for j in range(limit, len(msk[0])):\n",
-    "            cop[i][j] = 1\n",
-    "            cop[j][i] = 1\n",
-    "    return cop\n",
+    "from mask_utils import ones_padding\n",
     "\n",
     "def run_pipeline(inplist):\n",
     "    # construct data structure for toy graph in format used on actual examples\n",
@@ -247,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "6a628828-df45-46ab-992b-fe662c079a83",
    "metadata": {},
    "outputs": [
@@ -255,20 +246,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([19])\n",
       "3\n",
       "torch.Size([3, 500])\n",
       "3\n",
+      "missing token\n",
       "0\n",
+      "missing token\n",
       "0\n",
       "Accuracy\n",
-      "1.0\n",
+      "0.8235294117647058\n",
       "INPUT\n",
       " The Fed raises interest rates . interest among the economists . the children of the future .\n",
       "PREDICTED\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', '.', 'NN', 'IN', 'DT', 'NNS', '.', 'DT', 'NNS', 'IN', 'DT', 'NN', '.', '.', '<pad>']\n",
+      "['<pad>', 'DT', 'NNP', 'VBZ', 'JJ', '<pad>', '<pad>', 'NN', 'IN', 'DT', 'NNS', '.', 'DT', 'NNS', 'IN', 'DT', 'NN', '.', '<pad>', '<pad>']\n",
       "GOLD\n",
-      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', '.', 'NN', 'IN', 'DT', 'NNS', '.', 'DT', 'NNS', 'IN', 'DT', 'NN', '.', '.', '<pad>']\n",
+      "['<pad>', 'DT', 'NNP', 'VBZ', 'NN', 'NNS', '.', 'NN', 'IN', 'DT', 'NNS', '.', 'DT', 'NNS', 'IN', 'DT', 'NN', '.', '<pad>', '<pad>']\n",
       "\n",
       "Exploded paths\n",
       "The Fed raises interest rates.\n",
