Did some stuff with post-hoc scores

--- a/toy_sanity_dev.ipynb
+++ b/toy_sanity_dev.ipynb
@@ -788,7 +788,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 500, 44])"
+       "torch.Size([1,512, 44])"
       ]
      },
      "execution_count": 42,
