--- a/toy_sanity_dev_mt.ipynb
+++ b/toy_sanity_dev_mt.ipynb
@@ -328,7 +328,7 @@
     "    #idlist = get_idlist(pgraph)\n",
     "    for p in range(len(pgraphs)):\n",
     "        pgraph = pgraphs[p]\n",
-    "        for i in range(min(len(pgraph), 500)):\n",
+    "        for i in range(min(len(pgraph),512)):\n",
     "            pgraph[i]['score'] = scores[p][i]\n",
     "            if pgraph[i]['token_idx']>0:\n",
     "                if pgraph[i]['score']==0:\n",
@@ -342,10 +342,10 @@
     "    pgraph.reverse()\n",
     "    # for all tokens\n",
     "    i = 0\n",
-    "    while i < min(len(pgraph), 500):\n",
+    "    while i < min(len(pgraph),512):\n",
     "        ns = pgraph[i]\n",
     "        # check if any tokens that come after actually should be before\n",
-    "        for j in range(i, min(len(pgraph), 500)):\n",
+    "        for j in range(i, min(len(pgraph),512)):\n",
     "            # if so, re-insert right before in list\n",
     "            if pgraph[j]['id'] in ns:\n",
     "                tmp = pgraph[j]\n",
@@ -450,7 +450,7 @@
     "        for inp in inputs:\n",
     "            #print(\"inp \", inp)\n",
     "            padd = list(inp[1:]).index(0)+2\n",
-    "            msktmp = torch.ones((500, 500))\n",
+    "            msktmp = torch.ones((500,512))\n",
     "            msktmp[:padd, padd:] = 0 \n",
     "            msktmp[padd:, padd:] = torch.tril(msktmp[padd:, padd:])\n",
     "            inp[inp==1] = 0\n",
@@ -567,9 +567,9 @@
       "RES  <s> Le sandwich était très santé</s><s> The sandwich was ok\n",
       "The\n",
       "6587828736\n",
-      "torch.Size([1, 500])\n",
-      "torch.Size([1, 500])\n",
-      "torch.Size([1, 500, 500])\n",
+      "torch.Size([1,512])\n",
+      "torch.Size([1,512])\n",
+      "torch.Size([1,512,512])\n",
       "6587831296\n",
       "tensor(-0.0121, device='cuda:1')\n"
      ]
@@ -1468,7 +1468,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 500, 44])"
+       "torch.Size([1,512, 44])"
       ]
      },
      "execution_count": 42,
