--- a/efficient_rerank.ipynb
+++ b/efficient_rerank.ipynb
@@ -1769,7 +1769,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([101, 500, 500])"
+       "torch.Size([101,512,512])"
       ]
      },
      "execution_count": 13,
@@ -1939,7 +1939,7 @@
     "    #idlist = get_idlist(pgraph)\n",
     "    for p in range(len(pgraphs)):\n",
     "        pgraph = pgraphs[p]\n",
-    "        for i in range(min(len(pgraph), 500)):\n",
+    "        for i in range(min(len(pgraph),512)):\n",
     "            pgraph[i]['score'] = scores[p][i]\n",
     "            if pgraph[i]['token_idx']>0:\n",
     "                if pgraph[i]['score']==0:\n",
@@ -1953,10 +1953,10 @@
     "    pgraph.reverse()\n",
     "    # for all tokens\n",
     "    i = 0\n",
-    "    while i < min(len(pgraph), 500):\n",
+    "    while i < min(len(pgraph),512):\n",
     "        ns = pgraph[i]\n",
     "        # check if any tokens that come after actually should be before\n",
-    "        for j in range(i, min(len(pgraph), 500)):\n",
+    "        for j in range(i, min(len(pgraph),512)):\n",
     "            # if so, re-insert right before in list\n",
     "            if pgraph[j]['id'] in ns:\n",
     "                tmp = pgraph[j]\n",
