--- a/model_construct.ipynb
+++ b/model_construct.ipynb
@@ -185,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 500, 500])"
+       "torch.Size([1,512,512])"
       ]
      },
      "execution_count": 11,
@@ -483,7 +483,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([101, 500, 44])"
+       "torch.Size([101,512, 44])"
       ]
      },
      "execution_count": 45,
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "def inp_id_test(lenvals):\n",
-    "    tmp = list(range(0, 500))\n",
+    "    tmp = list(range(0,512))\n",
     "    res = []\n",
     "    for i in range(0, lenvals):\n",
     "        res.append(torch.tensor(tmp))\n",
@@ -814,7 +814,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([99, 500, 44])"
+       "torch.Size([99,512, 44])"
       ]
      },
      "execution_count": 20,
@@ -1000,8 +1000,8 @@
     }
    ],
    "source": [
-    "r1 = torch.rand((6, 500, 52))\n",
-    "r2 = torch.rand((6, 500, 52))\n",
+    "r1 = torch.rand((6,512, 52))\n",
+    "r2 = torch.rand((6,512, 52))\n",
     "print(mse(r1, r2))\n",
     "print(loss(r1, r2))\n",
     "print(mse(latposylabels, pred2))"
