more experiments w posthoc

--- a/consolidated_pipeline.ipynb
+++ b/consolidated_pipeline.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-05 08:39:45.649256: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-05 08:39:45.649281: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-11-05 09:13:58.363319: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-05 09:13:58.363340: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.bias', 'lm_head.bias']\n",
+      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['lm_head.decoder.weight', 'lm_head.dense.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -157,13 +157,13 @@
     "        })\n",
     "        print(i)\n",
     "    res = pd.DataFrame(res)\n",
-    "    res.to_csv(\"latfound2\"+basedir[:-4]+\".csv\")\n",
+    "    #res.to_csv(\"latfound2\"+basedir[:-4]+\".csv\")\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f84a9fc2-9bf0-4d46-9a1b-6200ffe7ecfa",
    "metadata": {},
    "outputs": [],
@@ -185,6 +185,15 @@
     "    else:\n",
     "        #npcnt+=1\n",
     "        return 1\n",
+    "    \n",
+    "def weightaddprob (node):\n",
+    "    global pcnt, npcnt\n",
+    "    if \"prob\" in node.keys():\n",
+    "        #pcnt+=1\n",
+    "        return math.log(node['prob']) + 50*node['score']\n",
+    "    else:\n",
+    "        #npcnt+=1\n",
+    "        return 1\n",
     "\n",
     "def multprob (node):\n",
     "    if \"prob\" in node.keys():\n",
@@ -193,6 +202,65 @@
     "    else:\n",
     "        #npcnt+=1\n",
     "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e60ec539-66d0-48fc-978c-f8e5152b98f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mt_scores import get_scores_auto\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random as rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a688977f-e6e8-4848-9fe1-054dc94be324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean(listvals):\n",
+    "    return sum(listvals)/len(listvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e3beca-7673-4f7d-823f-83eee23ecf3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#defpreds = get_all_preds(base, default_scofunct)\n",
+    "#multpreds = get_all_preds(base, multprob)\n",
+    "weightaddprob = get_all_preds(base, weightaddprob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c12d5e89-26ba-434a-84ec-cefa2ee6c376",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weightaddprob.to_csv(\"waddpreds1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3a363120-c2df-4d59-b622-2716165d1a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defpreds.to_csv(\"defpreds.csv\")\n",
+    "multpreds.to_csv(\"multpreds.csv\")\n",
+    "weightaddprob.to_csv(\"waddpreds.csv\")"
    ]
   },
   {
@@ -217,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f782f43a-60c8-4bc7-b9c3-d77ca977b1d9",
    "metadata": {},
    "outputs": [
@@ -225,22 +293,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original nodes -  538\n",
-      "final detokd -  540\n",
-      "tensor(0.0824, device='cuda:1')\n",
-      "SRC - Il nous faut négocier un nouvel accord de partenariat et de coopération (APC), entre l’Union européenne et la Fédération de Russie, les pourparlers qui devaient être entamés l’an dernier ayant été suspendus, à cause de la guerre en Géorgie. \n",
-      "PRED - <s> Il nous faut négocier un nouvel accord de partenariat et de coopération (APC), entre l’Union européenne et la Fédération de Russie, les pourparlers qui devaient être entamés l’an dernier ayant été suspendus, à cause de la guerre en Géorgie.</s><s> We need to negotiate a new Partnership and Cooperation Agreement (PCA) between the EU and the Russian Federation because talks that were due to begin last year were suspended because of the war in Georgia.\n",
-      "REF - A new Partnership and Cooperation Agreement (PCA) between the EU and the Russian Federation must be negotiated. Those negotiations should have begun seriously last year, but the war in Georgia intervened to put them on hold. \n",
-      "605\n",
-      "512\n",
+      "original nodes -  428\n",
+      "final detokd -  446\n",
+      "tensor(51.9690, device='cuda:1')\n",
+      "SRC - Il y a de bonnes raisons de craindre que ces divisions de plus en plus marquées se retrouvent dans la nouvelle composition de la majorité du Parlement européen, ce qui va rendre la gouvernance difficile, sinon impossible. \n",
+      "PRED - <s> Il y a de bonnes raisons de craindre que ces divisions de plus en plus marquées se retrouvent dans la nouvelle composition de la majorité du Parlement européen, ce qui va rendre la gouvernance difficile, sinon impossible.</s><s> There are good reasons to fear that these growing divisions will find their way into the new composition of the majority in the European Parliament, making governance difficult, if not impossible.\n",
+      "REF - And there is good reason to fear that these widening rifts will be reflected in the new composition of the Parliament, making majority governance difficult if not impossible. \n",
+      "495\n",
+      "495\n",
       "0\n"
      ]
     }
    ],
    "source": [
     "pcnt = 0\n",
-    "IND = 3\n",
-    "best , flattened, prepared_pgraphs, mask, sents, posids, pred, posadd, flnodes = test_graph_verb(IND, base, default_scofunct)\n",
+    "IND = 5\n",
+    "best , flattened, prepared_pgraphs, mask, sents, posids, pred, posadd, flnodes = test_graph_verb(IND, base, weightaddprob)\n",
     "print(len(flattened))\n",
     "print(len(prepared_pgraphs[0]))\n",
     "print(pcnt)"
