Filled out tables

--- a/lattice_deg_explore.ipynb
+++ b/lattice_deg_explore.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-06 10:33:15.717334: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-06 10:33:15.717356: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-11-07 02:31:47.247752: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-07 02:31:47.247775: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "2692267f-3e1f-40ff-af6c-4cb168d7eab6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "d8de34cd-c42c-43d5-a545-83474810cdc4",
    "metadata": {
     "tags": []
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "da5dac4c-bbff-48f2-a530-689fa86b7270",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "b327be7a-e540-455c-80c9-5b33c1c005f2",
    "metadata": {},
    "outputs": [],
@@ -1147,10 +1147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "cc067d4e-745c-4749-a32a-03462fcd2249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bigres' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m utbest, qebest \u001b[38;5;241m=\u001b[39m getrer_scatter(\u001b[43mbigres\u001b[49m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeut\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqe\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutrerank\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqererank\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m utbest, bbest \u001b[38;5;241m=\u001b[39m getrer_scatter(bigres, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeut\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqe\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomet\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutrerank\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcometrerank\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bigres' is not defined"
+     ]
+    }
+   ],
    "source": [
     "utbest, qebest = getrer_scatter(bigres, [\"cqeut\", \"cqe\"], \"cqeutrerank\", \"cqererank\")\n",
     "utbest, bbest = getrer_scatter(bigres, [\"cqeut\", \"cqe\", \"comet\"], \"cqeutrerank\", \"cometrerank\")"
@@ -1168,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "4293e37f-ad58-4d18-9153-a852839eadfa",
    "metadata": {},
    "outputs": [],
@@ -1200,16 +1212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "id": "207fde64-105d-4874-bace-f83f7b3bba0c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Another variable is the degree to which other developed countries’ monetary policies will ease.\n",
-      " The other variable is the extent to which other developed countries will ease their monetary policies.\n"
+     "ename": "NameError",
+     "evalue": "name 'utcands' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(utc[ind])\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(effc[ind])\n\u001b[0;32m----> 5\u001b[0m printdiff(\u001b[38;5;241m2\u001b[39m, \u001b[43mutcands\u001b[49m, effcands)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'utcands' is not defined"
      ]
     }
    ],
@@ -1223,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "id": "b5d82572-a380-4bc0-b577-41500d19fc6b",
    "metadata": {},
    "outputs": [],
@@ -1240,10 +1255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "f2b1aea4-4222-409f-a6a3-999920856b29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bigres' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m filt \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m means, selected \u001b[38;5;241m=\u001b[39m getcomp_scatter(\u001b[43mbigres\u001b[49m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeut\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutmean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutselect\u001b[39m\u001b[38;5;124m\"\u001b[39m, filt, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m means, randlist \u001b[38;5;241m=\u001b[39m getcomp_scatter(bigres, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeut\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutmean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutrandom\u001b[39m\u001b[38;5;124m\"\u001b[39m, filt, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      4\u001b[0m means, maxes \u001b[38;5;241m=\u001b[39m getcomp_scatter(bigres, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeut\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutmean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcqeutmax\u001b[39m\u001b[38;5;124m\"\u001b[39m, filt, \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bigres' is not defined"
+     ]
+    }
+   ],
    "source": [
     "filt = None\n",
     "means, selected = getcomp_scatter(bigres, [\"cqeut\"], \"cqeutmean\", \"cqeutselect\", filt, True)\n",
@@ -1719,17 +1746,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a86ddc7a-da73-46c1-b68f-7f56a909186a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hyps, cqe, posthoc, comet, cqeut =  generate_scores(\"fr-en\", 0)"
+    "#hyps, cqe, posthoc, comet, cqeut =  generate_scores(\"fr-en\", 0)\n",
+    "#with open('torchsaved/newbigreslattice.pickle', 'wb') as handle:\n",
+    "#    pickle.dump(newbigres, handle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "5bc42278-213f-4c03-ab0f-7c4efc74e702",
    "metadata": {},
    "outputs": [],
@@ -1737,7 +1766,7 @@
     "# ahyps, cqe, posthoc, comet, cqeut, lens\n",
     "# bigres = genmany(\"fr-en\")\n",
     "# using loaded\n",
-    "with open('torchsaved/bigreslattice.pickle', 'rb') as handle:\n",
+    "with open('torchsaved/newbigreslattice.pickle', 'rb') as handle:\n",
     "    bigres = pickle.load(handle)"
    ]
   },
@@ -1817,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 9,
    "id": "1dc3c3fa-10f0-4886-b5d4-f6d8ea0e61c3",
    "metadata": {},
    "outputs": [],
@@ -1854,7 +1883,7 @@
     "    newarr = []\n",
     "    for i in range(len(ebi['comet'])):\n",
     "        newarr.append( 1*ebi['cqeut'][i]-1.25*ebi['posthoc'][i])\n",
-    "    print(ebi['posthoc'])\n",
+    "    #print(ebi['posthoc'])\n",
     "    #print(mean(newarr))\n",
     "    return np.argmax(newarr)\n",
     "\n",
@@ -1864,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "id": "acf075cd-ca7a-4835-b97c-80c559dc8a85",
    "metadata": {},
    "outputs": [],
@@ -1879,39 +1908,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_scores_auto(hyps, srcs, refs, \"posthoc\", lang)"
+    "posthoc = get_scores_auto(hy, re, sr, \"posthoc\", \"fr-en\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "75a086bc-1094-4ef7-a310-af1b8fecd6ea",
+   "execution_count": 34,
+   "id": "30c4a41b-0a6e-473a-9740-33ea2e45817e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2c0d953b-e240-48d6-a8b0-c9ca3ee54174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = {\n",
+    "    \"pscores\": posthoc,\n",
+    "}\n",
+    " \n",
+    "# Serializing json\n",
+    "json_object = json.dumps(dictionary, indent=4)\n",
+    " \n",
+    "# Writing to sample.json\n",
+    "with open(\"posthocdata.json\", \"w\") as outfile:\n",
+    "    outfile.write(json_object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d0936ea1-9df1-4e7c-b6ff-8ab41a383422",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bigres[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m posthoc\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "bigres[2] = posthoc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5198b158-a54d-4aca-8512-18677692ab48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newbigres = bigres[0], bigres[1], posthoc, bigres[3], bigres[4], bigres[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ad951f54-1d5a-4cf1-a3c0-4136a185d3bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "133977"
+       "0.8735709739358801"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(hy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad951f54-1d5a-4cf1-a3c0-4136a185d3bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "METRIC = \"cqeut\"\n",
-    "commax = [r['comet'] for r in rerank_distr(bigres, rerank_weighted)]\n",
+    "METRIC = \"comet\"\n",
+    "commax = [r['cqeut'] for r in rerank_distr(bigres, rerank_single)]\n",
     "mean(commax)"
    ]
   },
@@ -1948,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "id": "24578bba-a4c3-483b-a44d-e67ba5424493",
    "metadata": {},
    "outputs": [],
