--- a/makedata.ipynb
+++ b/makedata.ipynb
@@ -5,18 +5,142 @@
    "execution_count": 1,
    "id": "892206fd-6183-49ef-9db1-335e4b521e05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-08 05:16:05.988423: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-11-08 05:16:05.988443: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import csv\n",
     "import sys\n",
     "csv.field_size_limit(sys.maxsize)\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import baseline_cands as bc\n",
+    "import torchf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ea03e5ce-e44f-4042-8841-bc4a9c1daa31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get data for baselines (Beam Search, Beam Size 1, 10, 50)\n",
+    "testpreds = pd.read_csv(\"scontcompresseddef.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "665459f2-d13e-40b6-a8fb-0d7ed80bd9a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btok, bmodel = bc.load_model(\"fr_en\", \"cuda:2\")\n",
+    "bmodel.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51c07a50-56b1-4e03-bd39-49afd76094ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    bscands = bc.get_generate_candidates(bc.beam_generate, testpreds['src'], testpreds['ref']\n",
+    "                , btok, bmodel, 10, 1, \"fr_en\", \"cuda:2\", \"beam\", 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fddcd194-25dd-4724-a95c-27a15153a5f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1., -1., -1.,  ..., -1., -1., -1.],\n",
+       "        [ 1., -1., -1.,  ..., -1., -1., -1.],\n",
+       "        [ 1.,  1., -1.,  ..., -1., -1., -1.],\n",
+       "        ...,\n",
+       "        [ 1.,  1.,  1.,  ..., -1., -1., -1.],\n",
+       "        [ 1.,  1.,  1.,  ...,  1., -1., -1.],\n",
+       "        [ 1.,  1.,  1.,  ...,  1.,  1., -1.]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(torch.triu(torch.ones(32, 32))*2-torch.ones(32, 32))*-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a08a2171-a0fd-49c0-9df7-646f0a4300df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9539082969432306"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(bscands[1])/len(bscands[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d93ac8ca-e722-4458-bbb2-73dd2990b6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.tensor([[10, 20,0, 30.], [10, 20, 3, 30.]])/10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ca934acd-0211-46a0-b298-4299f1d7bfb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(7)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(a>0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "6ee1193c-0cbb-448b-b6da-a7691104de3e",
    "metadata": {},
    "outputs": [],
@@ -75,7 +199,6 @@
     "    with open(fname, 'r') as file:\n",
     "        while True:\n",
     "            line = file.readline()\n",
-    "            #print(line)\n",
     "            # if line is empty\n",
     "            # end of file is reached\n",
     "            if not line or len(line)<3:\n",
@@ -825,7 +948,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('latenv')",
    "language": "python",
    "name": "python3"
   },
@@ -840,6 +963,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2f77846b0243d2dee26bbaa6fd0a0b34a7adea800a5063b4b91f2f98ac96800"
+   }
   }
  },
  "nbformat": 4,
