Baseline results almost complete

--- a/distill_comet.ipynb
+++ b/distill_comet.ipynb
@@ -2260,7 +2260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('latenv')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
