--- a/makedata.ipynb
+++ b/makedata.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "892206fd-6183-49ef-9db1-335e4b521e05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-08 05:16:05.988423: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-11-08 05:16:05.988443: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import csv\n",
@@ -22,12 +13,12 @@
     "csv.field_size_limit(sys.maxsize)\n",
     "import pandas as pd\n",
     "import baseline_cands as bc\n",
-    "import torchf"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ea03e5ce-e44f-4042-8841-bc4a9c1daa31",
    "metadata": {},
    "outputs": [],
@@ -948,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('latenv')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
